syntax = "proto3";

package calculator;
option  go_package = "/grpc/calculator";
service Calculator {
  rpc Add (stream AddRequest) returns (stream AddResponse);
  rpc SendInstruction (stream AddRequest) returns (stream InstructionResponse);
}

message AddRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message AddResponse {
  int32 result = 1;
}

message InstructionResponse {
  string message = 1;
}